# scrivener-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture.md  implementation-guide.md  mcp-tools-spec.md  testing-strategy.md  tool-mapping.md  types.md
src/: error.rs  main.rs  server.rs  types.rs
src/services/: database.rs  mod.rs  project.rs
